[gd_scene load_steps=18 format=3 uid="uid://bgogxpa7yl6lh"]

[ext_resource type="Texture2D" uid="uid://dstb3560twlsf" path="res://assets/sprites/ui/main_menu/menu_bg.png" id="1_1ch07"]
[ext_resource type="Script" uid="uid://cgiqfot83doai" path="res://scripts/ui/main_menu/main_menu.gd" id="1_tk7lu"]
[ext_resource type="Texture2D" uid="uid://c7teygkln0ykc" path="res://assets/sprites/ui/main_menu/tittle/frame0000.png" id="2_r70wa"]
[ext_resource type="Texture2D" uid="uid://mhuh6ynk5v6k" path="res://assets/sprites/ui/main_menu/tittle/frame0001.png" id="3_52x6y"]
[ext_resource type="Texture2D" uid="uid://ciaqqltdp800c" path="res://assets/sprites/ui/main_menu/tittle/frame0002.png" id="4_8ouhi"]
[ext_resource type="Texture2D" uid="uid://dxnugag2xanup" path="res://assets/sprites/ui/main_menu/tittle/frame0003.png" id="5_5mqxt"]
[ext_resource type="FontFile" uid="uid://d2pwmhru8ykyk" path="res://assets/fonts/monogram.ttf" id="6_52x6y"]
[ext_resource type="Texture2D" uid="uid://g82ccj2t7oil" path="res://assets/sprites/ui/main_menu/tittle_2/0000.png" id="7_wv6bh"]
[ext_resource type="Texture2D" uid="uid://duucw4dnirsi8" path="res://assets/sprites/ui/main_menu/tittle_2/0001.png" id="8_g6wm5"]
[ext_resource type="Texture2D" uid="uid://utkjc386u6qs" path="res://assets/sprites/ui/main_menu/tittle_2/0002.png" id="9_03ujm"]
[ext_resource type="Texture2D" uid="uid://dja6iqblqab0m" path="res://assets/sprites/ui/rect_5.png" id="10_chxti"]
[ext_resource type="Texture2D" uid="uid://fee2xy3ry4ng" path="res://assets/sprites/ui/main_menu/tittle_2/0003.png" id="10_is50t"]
[ext_resource type="Texture2D" uid="uid://c70cqvwtjt1gt" path="res://assets/color_pallate/fading-16-1x.png" id="11_2pxis"]
[ext_resource type="PackedScene" uid="uid://b2hbeuy6ofwwb" path="res://scenes/ui/main_menu/menu_item.tscn" id="11_jo8o5"]
[ext_resource type="PackedScene" uid="uid://df4n26hlh5twh" path="res://scenes/ui/main_menu/options/options.tscn" id="13_ataax"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tk7lu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r70wa")
}, {
"duration": 1.0,
"texture": ExtResource("3_52x6y")
}, {
"duration": 1.0,
"texture": ExtResource("4_8ouhi")
}, {
"duration": 1.0,
"texture": ExtResource("5_5mqxt")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_wv6bh")
}, {
"duration": 1.0,
"texture": ExtResource("8_g6wm5")
}, {
"duration": 1.0,
"texture": ExtResource("9_03ujm")
}, {
"duration": 1.0,
"texture": ExtResource("10_is50t")
}],
"loop": true,
"name": &"new_animation",
"speed": 4.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_tk7lu"]
font = ExtResource("6_52x6y")
font_color = Color(0.294118, 0.239216, 0.266667, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tk7lu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_1ch07")

[node name="main_menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="main_menu"]
custom_minimum_size = Vector2(240, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -104.0
offset_right = 120.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="main_menu/Control"]
sprite_frames = SubResource("SpriteFrames_tk7lu")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.0778672
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 5.0
offset_right = 56.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="button_play" parent="main_menu/VBoxContainer" instance=ExtResource("11_jo8o5")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="button_options" parent="main_menu/VBoxContainer" instance=ExtResource("11_jo8o5")]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="button_credits" parent="main_menu/VBoxContainer" instance=ExtResource("11_jo8o5")]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="button_quit" parent="main_menu/VBoxContainer" instance=ExtResource("11_jo8o5")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -64.5
offset_right = 112.5
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_chxti")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Label" type="Label" parent="credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -49.0
offset_right = 99.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
text = "Programmer, level design, artist:
Piyan Apriyanto


Niki Naka interactive."
label_settings = SubResource("LabelSettings_tk7lu")
horizontal_alignment = 1

[node name="menu_item" parent="credits" instance=ExtResource("11_jo8o5")]
layout_mode = 1
offset_left = -39.0
offset_top = 79.0
offset_right = 39.0
offset_bottom = 92.0
grow_horizontal = 2
text = "Back"

[node name="Fading-16-1x" type="Sprite2D" parent="."]
visible = false
position = Vector2(128, 10)
scale = Vector2(13.625, 28)
texture = ExtResource("11_2pxis")

[node name="options" parent="." instance=ExtResource("13_ataax")]
visible = false
layout_mode = 1
